--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "postgres",
-    "password": 2468,
+    "password": "2468",
     "database": "admin",
     "host": "127.0.0.1",
     "dialect": "postgres"
